# Dungeon

./: README.md  pyproject.toml
assets/: meta.json
dungeon/: dungeon_gen.py  main.py  type.py
dungeon/ecs/: __init__.py  ecs.py  plugin.py  qualifier.py  query.py  resource.py  schedule.py
dungeon/ecs/builtin/: animation_plugin.py  component.py  input_plugin.py  render_plugin.py  render_state.py  resource.py  time_plugin.py
dungeon/shader/: quad.py
