[project]
name = "dungeon"
version = "0.1.0"
description = "A simple dungeon game written in python, since `2026.05.15`."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "line-profiler>=5.0.2",
    "moderngl>=5.12.0",
    "numpy>=2.4.4",
    "pygame>=2.6.1",
    "rich>=15.0.0",
]
